Añadiendo nombre e imagenes a los personajes en el detalle del episodio, además empiezo aplicarle un poco de color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="stats">Estadísticas</string>
     <string name="settings">Ajustes</string>
     <string name="about">Acerca de...</string>
+    <string name="CharactersTitle">Personajes</string>
+    <string name="seen">Visto</string>
 </resources>
